# vortex

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Command Buffer Test Data.txt  Dockerfile  Dockerfile.cefet  Dockerfile.dev  Dockerfile.prod  Flubber_FPGA_Startup_Guide.md  ISET  LICENSE  Makefile  Makefile.in  README.md  README_MY_SETUP.md  RELEASE  TODO  VERSION  VX_config.toml  VX_types.toml  WLDST.diff  WLDST_v2.diff  afu_diff.diff  assignments.txt  bar_unit.diff  blackbox.rtlsim.cache  blackbox.simx.cache  blackbox.vlsim.cache  cache_analysis.md  changes55.diff  chat.rapidgpt  ci_xlen32.sh  ci_xlen64.sh  config.mk.in  (+49 more)
.claude/: settings.json
00_workspace/: int8_nt32_kernel_dump_analysis.md
ci/: average_fedp_saif.py  blackbox.sh  check_config_boundary.sh  check_public_headers.sh  check_sw_sim_boundary.sh  chipstar_install.sh.in  conftest.py  datagen.py  dtm_test.py  gem5_install.sh.in  gem5_run_app.py  gem5_run_hostless_app.py  gem5_test_vortex_app.py  gem5_test_vortex_hello.py  gen_config.py  gen_test_data.sh  install_dependencies.sh  mesa_install.sh.in  perf_regression.csv  perf_regression.py  perfetto.py  prebuilt.sh  register_icd.sh  regression.sh  regression.sh.in  regression64.sh  run_batch.sh  run_workload.sh  sst_install.sh.in  sst_run_hostless_app.py  sst_test_vortex_conform.py  sst_test_vortex_fibonacci.py  sst_test_vortex_hello.py  sst_test_vortex_memHierarchy.py  sst_test_vortex_vecadd.py  system_updates.sh  tcu_fedp_power.sh.in  tcu_saif_sweep.sh.in  test_compiler.sh  test_driver.sh  (+15 more)
claude_doc/: DTCU_Control_commit_fix_report.md  DTCU_TMA_plan.md  DTCU_baseline_dtcu_compare.md  to do list.txt
doc/: Cache_Subsystem.md  Codebase.md  Flubber_FPGA_Startup_Guide.md  Makefile  Microarchitecture.md  Simulation.md  Vortex.md  cache_subsystem.md  codebase.md  debugging.md  execute_opencl_on_vortex.md  fpga_setup.md  harp_iset.tex  microarchitecture.md
docs/: Vortex.pptx  Vortex_OpenCL.pptx  Vortex_projects.pptx  altera_fpga_guide.md  bug_fixes.md  building_toolchain.md  cache_flush_architecture.md  cache_subsystem.md  codebase.md  coding_guidelines_cpp.md  coding_guidelines_verilog.md  continuous_integration.md  contributing.md  debug_mode.md  debugging.md  environment_setup.md  execute_opencl_on_vortex.md  fpga_setup.md  gem5_integration.md  hardware_library.md  index.md  install_vortex.md  intel_devcloud.md  microarchitecture.md  perfetto_analysis.md  references.md  simobject.md  simulation.md  software.md  synthesis_analysis.md  tcu_formats.md  testing.md  vm.md  vortex_functions.md  xilinx_fpga_guide.md
driver/: Makefile  set_env.sh
emulator/: Makefile  args.cpp  core.cpp  emulator.debug  enc.cpp  harptool  harptool.cpp  instruction.cpp  mem.cpp  qsim-harp.cpp  test_riscv.sh
evaluation/: export_cycle_counts.py  run_tests.sh  synth_data.csv
hw/: .gitignore  .rules.verible_lint  Makefile  VX_config.h  VX_config.toml  VX_types.toml  gen_config.py  vortex_opae.toml
kernel/: .gitignore  Makefile  libvortexrt.dump  vortex_test.dump  vortex_test.elf  vortex_test.hex  vx_main.c
logs_t32_type1_updated1/: dfv_perf.csv
logs_t32_type2_updated1/: dfv_perf.csv
logs_t32_type3_updated1/: dfv_perf.csv
miscs/: musl_libc.patch  vortex.cmake
old_rtl/: Makefile  VX_csr_pipe.v  VX_decode.v  VX_generic_register.v  VX_gpr_wrapper.v  VX_priority_encoder_w_mask.v
perf/: .gitignore  draw3d.sh  roofline.py  sgemm2_dxa_compare_all.sh
rtl/: ._VX_gpr_syn.v  .gitignore  Makefile  VX_alu.v  VX_back_end.v  VX_better_warp_scheduler.v  VX_context.v  VX_context_slave.v  VX_countones.v  VX_csr_data.v  VX_csr_handler.v  VX_csr_pipe.v  VX_csr_wrapper.v  VX_d_e_reg.v  VX_decode.v  VX_define.h  VX_define.v  VX_define_synth.v  VX_dmem_controller.v  VX_e_m_reg.v  VX_execute.v  VX_execute_unit.v  VX_f_d_reg.v  VX_fetch.v  VX_fetch_old.v  VX_gpr.v  (+44 more)
runtime/mains/nativevecadd/include/: CMakeLists.txt  _clang_opencl.h  pocl_file_util.h
runtime/mains/nativevecadd/include/CL/: CMakeLists.txt
runtime/mains/nativevecadd/include/OpenCL/: cl_gl.h  cl_gl_ext.h  cl_platform.h
tests/opencl/leukocyte/meschach_lib/: FILELIST  Makefile  README  arnoldi.c  bdfactor.c  bkpfacto.c  chfactor.c  configure  configure.in  conjgrad.c  copy.c  copyright  dmacheps.c  err.c  err.h  extras.c  fft.c  fmacheps.c  givens.c  hessen.c  hsehldr.c  init.c  iotort.c  iter.h  iter0.c  iternsym.c  itersym.c  itertort.c  ivecop.c  lanczos.c  lufactor.c  machine.c  machine.h  machine.h.in  makefile.in  matlab.c  matlab.h  matop.c  matrix.h  matrix2.h  (+54 more)
tests/opencl/leukocyte/meschach_lib/MACHINES/: cornelison  w-mckinnon
tests/opencl/leukocyte/meschach_lib/MACHINES/Cray/: Makefile  machine.h  mesch-cray.tar.Z  mesch-cray.tar.Z.uu  patch.1  patch.2  patch.3
tests/opencl/leukocyte/meschach_lib/MACHINES/GCC/: Makefile
tests/opencl/leukocyte/meschach_lib/MACHINES/Linux/: Makefile  machine.h
tests/opencl/leukocyte/meschach_lib/MACHINES/MicroSoft/: Makefile  machine.h
tests/opencl/leukocyte/meschach_lib/MACHINES/OS2/: Makefile  README  machine.h
tests/opencl/leukocyte/meschach_lib/MACHINES/RS6000/: Makefile  machine.c  machine.h
tests/opencl/leukocyte/meschach_lib/MACHINES/SGI/: Makefile  machine.h
tests/opencl/leukocyte/meschach_lib/MACHINES/SPARC/: Makefile  machine.h
tests/opencl/leukocyte/meschach_lib/MACHINES/ThinkC/: README  TC-README  TC-machine-2.h  TC-machine.h  machine.h
tests/opencl/leukocyte/meschach_lib/MACHINES/TurboC/: README  filelist  machine.h  meschach.mak  meschtc.zip.uu
tests/opencl/leukocyte/meschach_lib/MACHINES/WatcomPC/: machine.h
(+10892 files in other folders)
